--- a/force-app/main/default/pages/SummitEventsDonation.page
+++ b/force-app/main/default/pages/SummitEventsDonation.page
@@ -22,7 +22,7 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
 
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
                 <apex:form id="OptionalDonation" styleClass="slds-grid slds-wrap">
 
@@ -106,7 +106,7 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
                         <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
                             <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:commandLink action="{!submitDonation}" onClick="fadeout();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                                <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                                <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small" immediate="true"/>
                             </p>
                         </div>
                     </apex:outputPanel>
