--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -21,7 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <apex:form id="SummitEventsRegisterAppointmentsForm" styleClass="slds-grid slds-wrap">
@@ -174,7 +174,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             <p class="slds-text-body slds-p-vertical_xx-small"><em>Once you have made your selections click next.</em></p>
                             <p class="slds-text-body slds-p-vertical_xx-small">
                                 <apex:commandLink action="{!saveOptions}" onClick="fadeout(); return populateAppJSON();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
-                                <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                                <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small" immediate="true"/>
                             </p>
                         </div>
 
