--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -293,7 +293,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     {!eventPage.First_Name_Label__c} <abbr class="slds-required" title="required">*</abbr>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:inputText value="{!eventRegistration.Registrant_First_Name__c}" html-aria-describedby="firstName-required" id="firstName" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')} {!IF(contactSet, 'disable', '')}"/>
+                                    <apex:inputText value="{!eventRegistration.Registrant_First_Name__c}" html-aria-describedby="firstName-required" id="firstName" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')} {!IF(contactSet, 'disable', '')}" disabled="{!contactSet}"/>
                                 </div>
                                 <div class="slds-form-element__help" id="firstName-required">This field is required</div>
                             </div>
@@ -306,7 +306,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     {!eventPage.Last_Name_Label__c} <abbr class="slds-required" title="required">*</abbr>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:inputText value="{!eventRegistration.Registrant_Last_Name__c}" id="lastName" html-aria-describedby="lastName-required" required="true" styleClass="slds-input {!IF(contactSet, 'disable', '')}"/>
+                                    <apex:inputText value="{!eventRegistration.Registrant_Last_Name__c}" id="lastName" html-aria-describedby="lastName-required" required="true" styleClass="slds-input {!IF(contactSet, 'disable', '')}" disabled="{!contactSet}"/>
                                 </div>
                                 <div class="slds-form-element__help" id="lastName-required">This field is required</div>
                             </div>
@@ -319,7 +319,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     {!eventPage.Email_Label__c} <abbr class="slds-required" title="required">*</abbr>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:inputField type="email" value="{!eventRegistration.Registrant_Email__c}" id="email" html-aria-describedby="email-required" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText validEmail', '')}"/>
+                                    <apex:input type="email" value="{!eventRegistration.Registrant_Email__c}" id="email" html-aria-describedby="email-required" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText validEmail', '')}" disabled="{!contactSet}"/>
                                 </div>
                                 <div class="slds-form-element__help" id="email-required">This field is required</div>
                             </div>
@@ -335,7 +335,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </apex:outputText>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:inputText value="{!eventRegistration.Registrant_Preferred_First_Name__c}" id="preferredFirstName" html-aria-describedby="preferredFirstName-required" required="{!IF(eventPage.Ask_Preferred_First_Name__c == 'Ask and require', true, false)}" styleClass="slds-input {!IF(contactSet, 'disable', '')}"/>
+                                    <apex:inputText value="{!eventRegistration.Registrant_Preferred_First_Name__c}" id="preferredFirstName" html-aria-describedby="preferredFirstName-required" required="{!IF(eventPage.Ask_Preferred_First_Name__c == 'Ask and require', true, false)}" styleClass="slds-input {!IF(contactSet, 'disable', '')}" disabled="{!contactSet}"/>
                                 </div>
                                 <div class="slds-form-element__help" id="preferredFirstName-required">
                                     {!IF(eventPage.Ask_Preferred_First_Name__c == 'Ask and require', 'This field is required', '')}
@@ -815,51 +815,51 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
 
                         <apex:variable value="{!100}" var="count"/>
-<!--                        <apex:repeat value="{!eventQuestions}" var="qu">-->
-<!--                            <apex:variable var="isRequired" value="{!qu.Required_For_Registrant__c}"/>-->
-<!--                            <apex:variable value="{!count+1}" var="count"/>-->
-<!--                            <apex:variable var="AddInfoLabel" value="AddInfoLabel{!TEXT(count)}"/>-->
+                        <!--                        <apex:repeat value="{!eventQuestions}" var="qu">-->
+                        <!--                            <apex:variable var="isRequired" value="{!qu.Required_For_Registrant__c}"/>-->
+                        <!--                            <apex:variable value="{!count+1}" var="count"/>-->
+                        <!--                            <apex:variable var="AddInfoLabel" value="AddInfoLabel{!TEXT(count)}"/>-->
 
-<!--                            <div class="slds-col slds-p-around_x-small slds-size_1-of-1">-->
+                        <!--                            <div class="slds-col slds-p-around_x-small slds-size_1-of-1">-->
 
-<!--                                <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">-->
+                        <!--                                <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">-->
 
-<!--                                    <apex:outputLabel for="{!AddInfoLabel}" styleClass="slds-form-element__label">-->
-<!--                                        {!qu.Question_Text__c}-->
-<!--                                        <apex:outputText escape="false" rendered="{!isRequired}">-->
-<!--                                            <abbr class="slds-required" title="required">*</abbr>-->
-<!--                                        </apex:outputText>-->
-<!--                                    </apex:outputLabel>-->
+                        <!--                                    <apex:outputLabel for="{!AddInfoLabel}" styleClass="slds-form-element__label">-->
+                        <!--                                        {!qu.Question_Text__c}-->
+                        <!--                                        <apex:outputText escape="false" rendered="{!isRequired}">-->
+                        <!--                                            <abbr class="slds-required" title="required">*</abbr>-->
+                        <!--                                        </apex:outputText>-->
+                        <!--                                    </apex:outputLabel>-->
 
 
-<!--                                    <apex:outputPanel layout="block" styleClass="slds-form-element__control">-->
+                        <!--                                    <apex:outputPanel layout="block" styleClass="slds-form-element__control">-->
 
-<!--                                        &lt;!&ndash;Text area &ndash;&gt;-->
-<!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Text area'), true, false)}">-->
-<!--                                            <apex:inputTextarea label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-textarea"/>-->
-<!--                                        </apex:outputPanel>-->
+                        <!--                                        &lt;!&ndash;Text area &ndash;&gt;-->
+                        <!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Text area'), true, false)}">-->
+                        <!--                                            <apex:inputTextarea label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-textarea"/>-->
+                        <!--                                        </apex:outputPanel>-->
 
-<!--                                        &lt;!&ndash;Text box&ndash;&gt;-->
-<!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c,'Text box'), true, false)}">-->
-<!--                                            <apex:inputField label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-input"/>-->
-<!--                                        </apex:outputPanel>-->
+                        <!--                                        &lt;!&ndash;Text box&ndash;&gt;-->
+                        <!--                                        <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(qu.Question_Type__c,'Text box'), true, false)}">-->
+                        <!--                                            <apex:inputField label="{!AddInfoLabel}" value="{!placeholderValue}" styleClass="slds-input"/>-->
+                        <!--                                        </apex:outputPanel>-->
 
-<!--                                        &lt;!&ndash;Pick List&ndash;&gt;-->
-<!--                                        <apex:outputPanel layout="block" styleClass="slds-select_container" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Pick-list'), true, false)}">-->
+                        <!--                                        &lt;!&ndash;Pick List&ndash;&gt;-->
+                        <!--                                        <apex:outputPanel layout="block" styleClass="slds-select_container" rendered="{!IF(CONTAINS(qu.Question_Type__c, 'Pick-list'), true, false)}">-->
 
-<!--                                            <apex:selectList label="{!AddInfoLabel}" value="{!placeholderValue}" size="1" styleClass="slds-select">-->
-<!--                                                <apex:selectOptions value="{!getCreateVFPicklist}">-->
-<!--                                                    <apex:param name="site" value="{!qu.Question_Pick_List__c}" assignTo="{!picklistStringToFormat}"/>-->
-<!--                                                </apex:selectOptions>-->
-<!--                                            </apex:selectList>-->
+                        <!--                                            <apex:selectList label="{!AddInfoLabel}" value="{!placeholderValue}" size="1" styleClass="slds-select">-->
+                        <!--                                                <apex:selectOptions value="{!getCreateVFPicklist}">-->
+                        <!--                                                    <apex:param name="site" value="{!qu.Question_Pick_List__c}" assignTo="{!picklistStringToFormat}"/>-->
+                        <!--                                                </apex:selectOptions>-->
+                        <!--                                            </apex:selectList>-->
 
-<!--                                        </apex:outputPanel>-->
+                        <!--                                        </apex:outputPanel>-->
 
-<!--                                    </apex:outputPanel>-->
-<!--                                </div>-->
-<!--                            </div>-->
+                        <!--                                    </apex:outputPanel>-->
+                        <!--                                </div>-->
+                        <!--                            </div>-->
 
-<!--                        </apex:repeat>-->
+                        <!--                        </apex:repeat>-->
 
                         <!-- Submit buttons -->
                         <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1">
