--- a/force-app/main/default/pages/SummitEventsAdditionalQuestions.page
+++ b/force-app/main/default/pages/SummitEventsAdditionalQuestions.page
@@ -15,19 +15,17 @@
             <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/sldsHelper.js')}" type="text/javascript"></script>
             <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/additionalQuestions.js')}" type="text/javascript"></script>
             <script>
-                function lookupSearchJS(lookup, searchTerm, callback, originObjId) {
-                    Visualforce.remoting.Manager.invokeAction(
-                        '{!$RemoteAction.SummitEventsAdditionalQuestionsCtlr.lookupSearch}',
-                        lookup, searchTerm,
-                        function (result, event) {
-                            if (event.status) {
-                                callback(result, originObjId)
-                            } else if (event.type === 'exception') {
-                            } else {
-                            }
-                        },
-                        {escape: true}
-                    );
+                async function lookupSearchJS(lookup, searchTerm) {
+                    return new Promise((resolve, reject) => {
+                        Visualforce.remoting.Manager.invokeAction(
+                            '{!$RemoteAction.SummitEventsAdditionalQuestionsCtlr.lookupSearch}',
+                            lookup, searchTerm,
+                            (result, event) => {
+                                event.status ? resolve(result) : reject(event.message);
+                            },
+                            {escape: true}
+                        );
+                    });
                 }
             </script>
         </apex:define>
@@ -36,7 +34,7 @@
 
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <!-- EVENT BREADCRUMB -->
@@ -125,17 +123,26 @@
                                         <apex:outputPanel rendered="{!qu.type = 'Lookup'}" layout="block" styleClass="referenceLookup slds-combobox_container">
                                             <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click" aria-expanded="false" aria-haspopup="listbox" role="combobox" data-lookup="{!qu.lookup}" data-listicon="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#account')}">
                                                 <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
-                                                    <apex:inputText value="{!eventRegistration[qu.mapTo]}" id="combobox" styleClass="bind-autocomplete slds-input slds-combobox__input" html-autocomplete="off" html-role="textbox" html-aria-autocomplete="list"/>
+                                                    <apex:inputText value="{!lookupHoldingValues[qu.mapTo]}" id="combobox" styleClass="bind-autocomplete slds-input slds-combobox__input" html-autocomplete="off" html-role="textbox" html-aria-autocomplete="list"/>
                                                     <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right refRemoveButton" title="Remove selected option" style="display:none;">
                                                         <svg class="slds-button__icon" aria-hidden="true">
-                                                            <use xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, '/assets/icons/utility-sprite/svg/symbols.svg#close')}"></use>
+                                                            <use xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/_slds/icons/utility-sprite/svg/symbols.svg#close"></use>
                                                         </svg>
                                                         <span class="slds-assistive-text">Remove selected option</span>
                                                     </button>
                                                     <span class="slds-icon_container slds-icon-utility-search slds-input__icon slds-input__icon_right refMagGlass">
-                                                          <svg class="slds-icon slds-icon slds-icon_x-small slds-icon-text-default " aria-hidden="true">
-                                                            <use xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/utility-sprite/svg/symbols.svg#search')}"></use>
-                                                          </svg>
+                                                        <svg class="slds-icon slds-icon slds-icon_x-small slds-icon-text-default " aria-hidden="true">
+                                                            <use xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/_slds/icons/utility-sprite/svg/symbols.svg#search"></use>
+                                                        </svg>
+                                                        <div class="sea-spinner" style="height:1rem;position:relative;margin-right:.5rem;display:none;">
+                                                            <div class="slds-spinner_container">
+                                                                <div role="status" class="slds-spinner slds-spinner_x-small">
+                                                                    <span class="slds-assistive-text">Loading</span>
+                                                                    <div class="slds-spinner__dot-a"></div>
+                                                                    <div class="slds-spinner__dot-b"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </span>
                                                 </div>
                                                 <div class="slds-dropdown slds-dropdown_length-with-icon-7 slds-dropdown_fluid" role="listbox">
